--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+      <% if logged_in? %>
+        <script id="bootstrap-current-user" type="text/javascript">
+          window.currentUser = <%= render("api/users/user.json.jbuilder",
+            user: current_user).html_safe %>
+        </script>
+      <% end %>
     <%= yield %>
   </body>
-</html>
+</html>``
