--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -10,17 +10,20 @@
  }
 
  .modal-child {
-   width: 600px;
-   height: 600px;
+   width: 450px;
+   height: 450px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    border-radius: 20px;
+   display: flex;
+   justify-content: center;
  }
 
  .modal-child form{
+     width: 100%;
      margin-left: auto;
      margin-right: auto;
  }
