--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -22,10 +22,10 @@
    justify-content: center;
  }
 
- .modal-child form{
+ .modal-child > form{
      width: 100%;
-     margin-left: auto;
-     margin-right: auto;
+     border: 1px solid red;
+
  }
 
  .close-x {
