--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -10,16 +10,15 @@
  }
 
  .modal-child {
-   width: 450px;
-   height: 450px;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   background-color: white;
-   border-radius: 20px;
-   display: flex;
-   justify-content: center;
+    width: 450px;
+    height: 572px;
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    display: flex;
+    justify-content: center;
  }
 
  .modal-child > form{
@@ -33,4 +32,80 @@
    top: 5px;
    right: 5px;
    cursor: pointer;
+ }
+
+ .username-sign-in{
+    width: 400px;
+    height: 40px;
+    margin-top: 5px;
+
+    background-color: white;
+    color: grey;
+    font-size: 16px;
+    line-height: 18px;
+    height: 40px;
+    border: solid 1px grey;
+    border-radius: 2px;
+    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+ }
+
+ .password-sign-in{
+    width: 400px;
+    height: 40px;
+    margin-top: 5px;
+
+    background-color: white;
+    color: grey;
+    font-size: 16px;
+    line-height: 18px;
+    height: 40px;
+    border: solid 1px grey;
+    border-radius: 2px;
+    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+ }
+
+ .email-sign-up{
+    width: 400px;
+    height: 40px;
+    margin-top: 5px;
+
+    background-color: white;
+    color: grey;
+    font-size: 16px;
+    line-height: 18px;
+    height: 40px;
+    border: solid 1px grey;
+    border-radius: 2px;
+    font-family: Interstate,Lucida Grande
+ }
+
+   .continue-sign-in{
+    width: 400px;
+    height: 40px;
+    margin-top: 10px;
+    background-color: #f50;
+    color: white;
+    font-size: 16px;
+    line-height: 18px;
+    height: 40px;
+    border: none;
+    border-radius: 2px;
+    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+    cursor: pointer;
+ }
+
+ .log-in{
+    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+    font-size: 32;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    justify-content: center;
+ }
+
+ .warning-text{
+    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
+    font-weight: 25;
+    font-size: 12px;
+    color: #999;
+    line-height: 17px;
  }
