--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -510,3 +510,110 @@ body{
 .errors{
     color: red;
 }
+
+.splash-devices{
+    // border: solid 1px rgb(255, 0, 0);
+    padding:0 60px;
+    padding-top: 60px;
+    background-color: #F2F2F2F2;
+    // background-image: url('sofaygo.jpeg');
+    // background-size: 100%;
+    // width: 1222px;
+    // margin-left: auto;
+    // margin-right: auto;
+    height: 390px;
+    display: flex;
+    // background-repeat: no-repeat;
+    .devices-img{
+        // border: solid 1px rgb(255, 0, 0);
+        width: 100%;
+        background-image: url('devices.jpeg');
+        background-repeat: no-repeat;
+    }
+    .txt-wrapper{
+        display: flex;
+        flex-flow: column nowrap;
+        width: 35%;
+        justify-content: center;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        .h1-txt{
+            font-size: 28px;
+            padding-bottom: 10px;
+        }
+        .h1-gradient{
+            content: "";
+            display: block;
+            width: 70px;
+            height: 3px;
+            background-image: linear-gradient(90deg,#7d01a1,#f30 50%,#f50);
+            margin-bottom: 20px;
+        }
+        .h2-txt{
+            font-size: 24px;
+        }
+    }
+}
+
+.creators{
+    background-image: url('creators.jpeg');
+    background-size: 100%;
+    width: 100%;
+    height: 380px;
+    background-repeat: no-repeat;
+    display: flex;
+    font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 200;
+
+
+    .creators-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: baseline;
+        padding-left: 70px;
+        width: 520px;
+        color: white;
+        font-size: 30px;
+    }
+    p{
+        padding: 20px 0;
+    }
+    button{
+        cursor: pointer;
+        margin-right: 8px;
+        font-size: 20px;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        border-radius: 3px;
+        padding-left: 20px;
+        padding-right: 20px;
+        height: 46px;
+        color: white;
+        font-weight: 200;
+        color: white;
+        border: 1.5px solid white;
+        background-color: transparent;
+    }
+}
+
+.explore-wrapper{
+    // border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 5px;
+    padding-bottom: 25px;
+}
+
+.explore-trending{
+    background-color: rgb(255, 85, 0);
+    border: none;
+    font-size: 20px;
+    font-weight: 325;
+    padding-right: 20px;
+    padding-left: 24px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    margin-top: 24px;
+    margin-bottom: 30px;
+}
+
