--- a/app/assets/stylesheets/playbar.scss
+++ b/app/assets/stylesheets/playbar.scss
@@ -33,7 +33,6 @@
   display: flex;
   align-items: center;
   flex: 1;
-  padding: 0 24px;
   span:first-child {
     margin-right: 10px;
   }
@@ -115,7 +114,7 @@
   }
 }
 
-.playbar-track-item {
+.playbar-song-item {
   display: flex;
   align-items: center;
   height: 48px;
@@ -124,7 +123,7 @@
   box-sizing: border-box;
 }
 
-.playbar-track-album-art {
+.playbar-song-album-art {
   margin: 0 10px 0 0;
   height: 30px;
 
@@ -138,7 +137,7 @@
   }
 }
 
-.playbar-track-item-container {
+.playbar-song-item-container {
   display: flex;
   flex-direction: column;
   span {
@@ -164,7 +163,9 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     word-break: normal;
+    margin-right: 10px;
     a {
+      text-decoration: none;
       color: #333;
       &:hover{
         color: #000;
@@ -173,4 +174,40 @@
   }
 }
 
+input[type=range]{
+    -webkit-appearance: none;
+}
 
+input[type=range]::-webkit-slider-runnable-track {
+    width: 300px;
+    height: 2px;
+    background: #ddd;
+    border: none;
+    border-radius: 1px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: #ff5500;
+    margin-top: -6px;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
+}
+
+.liked{
+  color: #ff5500;
+}
+
+// .unliked{
+//   // color: #ff5500;
+// }
