--- a/app/assets/stylesheets/playbar.scss
+++ b/app/assets/stylesheets/playbar.scss
@@ -12,6 +12,7 @@
 }
 
 
+
 .playbar-container {
     display: flex;
     justify-content: space-between;
@@ -140,6 +141,7 @@
 .playbar-song-item-container {
   display: flex;
   flex-direction: column;
+  font-family:Arial, Helvetica, sans-serif;
   span {
     font-size: 12px;
     line-height: 16px;
