--- a/app/assets/stylesheets/playbar.scss
+++ b/app/assets/stylesheets/playbar.scss
@@ -11,8 +11,6 @@
     color: #333;
 }
 
-
-
 .playbar-container {
     display: flex;
     justify-content: space-between;
@@ -208,6 +206,10 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 .liked{
   color: #ff5500;
+}
+
+.orange-loop{
+  color: #ff5500
 }
 
 // .unliked{
