--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,7 +63,7 @@ body{
         display: flex;
         justify-content: space-between;
         height: 100px;
-        background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
+        // background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0) 100%);
         margin-top: -70px;
         
 
@@ -814,6 +814,6 @@ body{
 
 }
 
-.jo-overlay{
-    background: black;
-}
+// .jo-overlay{
+//     background: black;
+// }
