--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -534,6 +534,7 @@ body{
         border-radius: 2px;
         height: 40px;
         width: 100%;
+        margin-bottom: 10px;
         // height: 100px;
     }
 
@@ -549,6 +550,7 @@ body{
 
         .date-in-words{
             padding-bottom: 3px;
+            font-size: 14px;
         }
     }
 
