--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -397,6 +397,7 @@ body{
     width: 100%;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 100%, rgba(255,255,255,1) 100%);
+    margin-top: 45px;
 }
 
 .column-wrap{
@@ -568,7 +569,7 @@ body{
 
 .waveform-component{
     position: absolute;
-    top: 250px;
+    top: 300px;
     width: 725px;
     padding-left: 20px;
 }
@@ -812,7 +813,6 @@ body{
 .jo-logo{
     margin-left: 20px;
     filter: brightness(0) invert(1);
-
 }
 
 // .jo-overlay{
