--- a/app/assets/stylesheets/homebar.scss
+++ b/app/assets/stylesheets/homebar.scss
@@ -110,6 +110,23 @@
     h1{
         filter: brightness(0) invert(1);
         margin: 5px 5px 1px -6px;
+        font-size: 15px;
+        margin-right: 12px;
     }
 
+}
+
+.homebar-logout{
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    height: 26px;
+    line-height: 20px;
+    padding: 2px 11px 2px 10px;
+    margin-bottom: 2px;
+    text-align: center;
+    vertical-align: baseline;
+    box-sizing: border-box;
+    background-color: rgb(255, 85, 0);
+    color: white;
 }
