--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,15 @@
     <script type="text/javascript">
       window.small = "<%= image_url('small-logo.png')%>"
     </script>
-    
+     <meta property="og:title" content="Project Title" />
+     <meta property='og:image' content="<%= image_url('project_pic.gif') %>"/>
+     <meta property="og:description"
+       content="A brief description of your project."
+     />
+     <meta property="og:url"
+       content="http://projectname.herokuapp.com/"
+     />
+
   </head>
 
   <body>
